adiciona arquivos com dados teste 50/50k

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ostream": "cpp",
         "iosfwd": "cpp",
         "new": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "fstream": "cpp"
     }
 }
